added date format

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,7 +19,7 @@
         First Name <input type="text" name="firstName">
         Last Name <input type="text" name="lastName">
         SS <input type="number" name="socialSecurity">
-        DOB <input type="number" name="dob" value="02231986">
+        DOB <input type="date" name="dob">
         Bio <input type="text" name="bio">
         <br>
         <input type="submit">
